--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -477,10 +477,6 @@
 												<td><strong>DÉBITO AUTOMÁTICO</strong></td>
 												<td style="text-align: center;"><span v-html="aplicativo_diners_tarjeta_diners.debito_automatico"></span></td>
 											</tr>
-											<tr style="background-color: #c3c3c3;">
-												<td><strong>PROMEDIO DE PAGO</strong></td>
-												<td style="text-align: center;"><strong><span v-html="aplicativo_diners_tarjeta_diners.promedio_pago"></span></strong></td>
-											</tr>
 											<tr>
 												<td><strong>SCORE</strong></td>
 												<td style="text-align: center;"><span v-html="aplicativo_diners_tarjeta_diners.score"></span></td>
@@ -524,7 +520,7 @@
 											<tr>
 												<td><strong>FECHA DE COMPROMISO</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_diners.fecha_compromiso"></span></td>
-												<td style="width: 10%;"><strong>TT/EXIG/PARCIAL</strong></td>
+												<td style="width: 10%;"><strong>No FIN HISTÓRICOS</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_diners.tt_exig_parcial"></span></td>
 											</tr>
 											<tr>
@@ -801,10 +797,6 @@
 												<td><strong>DÉBITO AUTOMÁTICO</strong></td>
 												<td style="text-align: center;"><span v-html="aplicativo_diners_tarjeta_interdin.debito_automatico"></span></td>
 											</tr>
-											<tr style="background-color: #c3c3c3;">
-												<td><strong>PROMEDIO DE PAGO</strong></td>
-												<td style="text-align: center;"><strong><span v-html="aplicativo_diners_tarjeta_interdin.promedio_pago"></span></strong></td>
-											</tr>
 											<tr>
 												<td><strong>SCORE</strong></td>
 												<td style="text-align: center;"><span v-html="aplicativo_diners_tarjeta_interdin.score"></span></td>
@@ -848,7 +840,7 @@
 											<tr>
 												<td><strong>FECHA DE COMPROMISO</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_interdin.fecha_compromiso"></span></td>
-												<td style="width: 10%;"><strong>TT/EXIG/PARCIAL</strong></td>
+												<td style="width: 10%;"><strong>No FIN HISTÓRICOS</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_interdin.tt_exig_parcial"></span></td>
 											</tr>
 											<tr>
@@ -1114,10 +1106,6 @@
 												<td><strong>DÉBITO AUTOMÁTICO</strong></td>
 												<td style="text-align: center;"><span v-html="aplicativo_diners_tarjeta_discover.debito_automatico"></span></td>
 											</tr>
-											<tr style="background-color: #c3c3c3;">
-												<td><strong>PROMEDIO DE PAGO</strong></td>
-												<td style="text-align: center;"><strong><span v-html="aplicativo_diners_tarjeta_discover.promedio_pago"></span></strong></td>
-											</tr>
 											<tr>
 												<td><strong>SCORE</strong></td>
 												<td style="text-align: center;"><span v-html="aplicativo_diners_tarjeta_discover.score"></span></td>
@@ -1161,7 +1149,7 @@
 											<tr>
 												<td><strong>FECHA DE COMPROMISO</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_discover.fecha_compromiso"></span></td>
-												<td style="width: 10%;"><strong>TT/EXIG/PARCIAL</strong></td>
+												<td style="width: 10%;"><strong>No FIN HISTÓRICOS</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_discover.tt_exig_parcial"></span></td>
 											</tr>
 											<tr>
@@ -1427,10 +1415,6 @@
 												<td><strong>DÉBITO AUTOMÁTICO</strong></td>
 												<td style="text-align: center;"><span v-html="aplicativo_diners_tarjeta_mastercard.debito_automatico"></span></td>
 											</tr>
-											<tr style="background-color: #c3c3c3;">
-												<td><strong>PROMEDIO DE PAGO</strong></td>
-												<td style="text-align: center;"><strong><span v-html="aplicativo_diners_tarjeta_mastercard.promedio_pago"></span></strong></td>
-											</tr>
 											<tr>
 												<td><strong>SCORE</strong></td>
 												<td style="text-align: center;"><span v-html="aplicativo_diners_tarjeta_mastercard.score"></span></td>
@@ -1474,7 +1458,7 @@
 											<tr>
 												<td><strong>FECHA DE COMPROMISO</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_mastercard.fecha_compromiso"></span></td>
-												<td style="width: 10%;"><strong>TT/EXIG/PARCIAL</strong></td>
+												<td style="width: 10%;"><strong>No FIN HISTÓRICOS</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_mastercard.tt_exig_parcial"></span></td>
 											</tr>
 											<tr>
