Colocar campo OFERTA VALOR

--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -524,6 +524,10 @@
 												<td><span v-html="aplicativo_diners_tarjeta_diners.tt_exig_parcial"></span></td>
 											</tr>
 											<tr>
+												<td><strong>OFERTA VALOR</strong></td>
+												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_diners.oferta_valor"></span></td>
+											</tr>
+											<tr>
 												<td><strong>MOTIVO DE NO PAGO ANTERIOR</strong></td>
 												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_diners.motivo_no_pago_anterior"></span></td>
 											</tr>
@@ -844,6 +848,10 @@
 												<td><span v-html="aplicativo_diners_tarjeta_interdin.tt_exig_parcial"></span></td>
 											</tr>
 											<tr>
+												<td><strong>OFERTA VALOR</strong></td>
+												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_interdin.oferta_valor"></span></td>
+											</tr>
+											<tr>
 												<td><strong>MOTIVO DE NO PAGO ANTERIOR</strong></td>
 												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_interdin.motivo_no_pago_anterior"></span></td>
 											</tr>
@@ -1153,6 +1161,10 @@
 												<td><span v-html="aplicativo_diners_tarjeta_discover.tt_exig_parcial"></span></td>
 											</tr>
 											<tr>
+												<td><strong>OFERTA VALOR</strong></td>
+												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_discover.oferta_valor"></span></td>
+											</tr>
+											<tr>
 												<td><strong>MOTIVO DE NO PAGO ANTERIOR</strong></td>
 												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_discover.motivo_no_pago_anterior"></span></td>
 											</tr>
@@ -1460,6 +1472,10 @@
 												<td><span v-html="aplicativo_diners_tarjeta_mastercard.fecha_compromiso"></span></td>
 												<td style="width: 10%;"><strong>No FIN HISTÓRICOS</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_mastercard.tt_exig_parcial"></span></td>
+											</tr>
+											<tr>
+												<td><strong>OFERTA VALOR</strong></td>
+												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_mastercard.oferta_valor"></span></td>
 											</tr>
 											<tr>
 												<td><strong>MOTIVO DE NO PAGO ANTERIOR</strong></td>
