--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -904,6 +904,10 @@
 												<td><span v-html="aplicativo_diners_tarjeta_interdin.saldo_actual_facturado"></span></td>
 											</tr>
 											<tr>
+												<td><strong>MÍNIMO A PAGAR</strong></td>
+												<td><span v-html="aplicativo_diners_tarjeta_interdin.minimo_pagar"></span></td>
+											</tr>
+											<tr>
 												<td style="text-decoration: underline;"><strong>DEUDA ACTUAL</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_interdin.deuda_actual"></span></td>
 											</tr>
@@ -1217,6 +1221,10 @@
 												<td><span v-html="aplicativo_diners_tarjeta_discover.saldo_actual_facturado"></span></td>
 											</tr>
 											<tr>
+												<td><strong>MÍNIMO A PAGAR</strong></td>
+												<td><span v-html="aplicativo_diners_tarjeta_discover.minimo_pagar"></span></td>
+											</tr>
+											<tr>
 												<td style="text-decoration: underline;"><strong>DEUDA ACTUAL</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_discover.deuda_actual"></span></td>
 											</tr>
@@ -1528,6 +1536,10 @@
 											<tr>
 												<td><strong>SALDO ACTUALES</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_mastercard.saldo_actual_facturado"></span></td>
+											</tr>
+											<tr>
+												<td><strong>MÍNIMO A PAGAR</strong></td>
+												<td><span v-html="aplicativo_diners_tarjeta_mastercard.minimo_pagar"></span></td>
 											</tr>
 											<tr>
 												<td style="text-decoration: underline;"><strong>DEUDA ACTUAL</strong></td>
