--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -449,7 +449,7 @@
 									<th style="width: 25%; text-align: center; background-color: #0066A8; color: white;">DINERS</th>
 									<th style="width: 25%; text-align: center; background-color: #404040; color: white;">INTERDIN</th>
 									<th style="width: 25%; text-align: center; background-color: #E66929; color: white;">DISCOVER</th>
-									<th style="width: 25%; text-align: center; background-color: #EB001B; color: white;">MASTERCARD</th>
+									<th style="width: 25%; text-align: center; background-color: #A4B706; color: white;">MASTERCARD</th>
 								</tr>
 								</thead>
 								<tbody>
@@ -1519,7 +1519,7 @@
 										<table>
 											<tbody>
 											<tr>
-												<td colspan="2" style="text-align: center; background-color: #EB001B; color: white;"><strong>SALDOS FACTURADOS</strong></td>
+												<td colspan="2" style="text-align: center; background-color: #A4B706; color: white;"><strong>SALDOS FACTURADOS</strong></td>
 											</tr>
 											<tr>
 												<td style="width: 60%;"><strong>SALDO A 90 Y MAS 90 DÍAS</strong></td>
@@ -1572,7 +1572,7 @@
 										<table>
 											<tbody>
 											<tr>
-												<td colspan="4" style="text-align: center; background-color: #EB001B; color: white;"><strong>PAGOS</strong></td>
+												<td colspan="4" style="text-align: center; background-color: #A4B706; color: white;"><strong>PAGOS</strong></td>
 											</tr>
 											<tr>
 												<td style="width: 40%;"><strong>ABONO EFECTIVO DEL SISTEMA</strong></td>
@@ -1600,7 +1600,7 @@
 										<table>
 											<tbody>
 											<tr>
-												<td colspan="2" style="text-align: center; background-color: #EB001B; color: white;"><strong>SALDOS FACTURADOS DESPUÉS DE ABONO</strong></td>
+												<td colspan="2" style="text-align: center; background-color: #A4B706; color: white;"><strong>SALDOS FACTURADOS DESPUÉS DE ABONO</strong></td>
 											</tr>
 											<tr>
 												<td style="width: 60%;"><strong>SALDO A 90 Y MAS 90 DIAS</strong></td>
@@ -1624,7 +1624,7 @@
 										<table>
 											<tbody>
 											<tr>
-												<td colspan="4" style="text-align: center; background-color: #EB001B; color: white;"><strong>VALORES POR FACTURAR</strong></td>
+												<td colspan="4" style="text-align: center; background-color: #A4B706; color: white;"><strong>VALORES POR FACTURAR</strong></td>
 											</tr>
 											<tr>
 												<td style="width: 65%;"><strong>INTERESES POR FACTURAR</strong></td>
@@ -1662,7 +1662,7 @@
 										<table>
 											<tbody>
 											<tr>
-												<td colspan="2" style="text-align: center; background-color: #EB001B; color: white;"><strong>FINANCIAMIENTO</strong></td>
+												<td colspan="2" style="text-align: center; background-color: #A4B706; color: white;"><strong>FINANCIAMIENTO</strong></td>
 											</tr>
 											</tbody>
 										</table>
@@ -1670,8 +1670,8 @@
 										<table>
 											<tbody>
 											<tr>
-												<td style="width: 50%; text-align: center; background-color: #EB001B; color: white;"><strong>TIPO DE FINANCIAMIENTO</strong></td>
-												<td style="width: 50%; text-align: center; background-color: #EB001B; color: white;"><strong><span v-html="aplicativo_diners_tarjeta_mastercard.tipo_financiamiento"></span></strong></td>
+												<td style="width: 50%; text-align: center; background-color: #A4B706; color: white;"><strong>TIPO DE FINANCIAMIENTO</strong></td>
+												<td style="width: 50%; text-align: center; background-color: #A4B706; color: white;"><strong><span v-html="aplicativo_diners_tarjeta_mastercard.tipo_financiamiento"></span></strong></td>
 											</tr>
 											<tr>
 												<td><strong>TOTAL</strong></td>
@@ -1710,19 +1710,19 @@
 														   v-model="aplicativo_diners_tarjeta_mastercard.numero_meses_gracia" placeholder="NÚMERO DE MESES DE GRACIA" v-autoname/>
 												</td>
 											</tr>
-											<tr style="background-color: #EB001B; color: white;">
+											<tr style="background-color: #A4B706; color: white;">
 												<td><strong>VALOR A FINANCIAR</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_mastercard.valor_financiar"></span></td>
 											</tr>
-											<tr style="background-color: #EB001B; color: white;">
+											<tr style="background-color: #A4B706; color: white;">
 												<td><strong>TOTAL INTERESES</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_mastercard.total_intereses"></span></td>
 											</tr>
-											<tr style="background-color: #EB001B; color: white;">
+											<tr style="background-color: #A4B706; color: white;">
 												<td><strong>TOTAL FINANCIAMIENTO</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_mastercard.total_financiamiento_total"></span></td>
 											</tr>
-											<tr style="background-color: #EB001B; color: white;">
+											<tr style="background-color: #A4B706; color: white;">
 												<td><strong>VALOR CUOTA MENSUAL</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_mastercard.valor_cuota_mensual"></span></td>
 											</tr>
