--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -442,7 +442,7 @@
 					</div>
 
 					<div class=" row mb-4">
-						<div class="table-responsive">
+						<div class="table-responsive" style="scrollbar-color: red yellow;">
 							<table class="table border text-nowrap text-md-nowrap table-bordered table-sm mb-0 font-size: 10px;">
 								<thead>
 								<tr>
