--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -583,6 +583,10 @@
 												<td style="text-decoration: underline;"><strong>DEUDA ACTUAL</strong></td>
 												<td><span v-html="aplicativo_diners_tarjeta_diners.deuda_actual"></span></td>
 											</tr>
+											<tr>
+												<td style="text-decoration: underline;"><strong></strong></td>
+												<td></td>
+											</tr>
 											</tbody>
 										</table>
 										<br/>
