--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -584,8 +584,8 @@
 												<td><span v-html="aplicativo_diners_tarjeta_diners.deuda_actual"></span></td>
 											</tr>
 											<tr>
-												<td style="text-decoration: underline;"><strong>DEUDA ACTUAL</strong></td>
-												<td><span v-html="aplicativo_diners_tarjeta_diners.deuda_actual"></span></td>
+												<td style="text-decoration: underline;"><strong>&nbsp;</strong></td>
+												<td></td>
 											</tr>
 											</tbody>
 										</table>
