--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -528,6 +528,10 @@
 												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_diners.oferta_valor"></span></td>
 											</tr>
 											<tr>
+												<td><strong>REFINANCIACIONES ANTERIORES</strong></td>
+												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_diners.refinanciaciones_anteriores"></span></td>
+											</tr>
+											<tr>
 												<td><strong>MOTIVO DE NO PAGO ANTERIOR</strong></td>
 												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_diners.motivo_no_pago_anterior"></span></td>
 											</tr>
@@ -858,6 +862,10 @@
 												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_interdin.oferta_valor"></span></td>
 											</tr>
 											<tr>
+												<td><strong>REFINANCIACIONES ANTERIORES</strong></td>
+												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_interdin.refinanciaciones_anteriores"></span></td>
+											</tr>
+											<tr>
 												<td><strong>MOTIVO DE NO PAGO ANTERIOR</strong></td>
 												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_interdin.motivo_no_pago_anterior"></span></td>
 											</tr>
@@ -1177,6 +1185,10 @@
 												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_discover.oferta_valor"></span></td>
 											</tr>
 											<tr>
+												<td><strong>REFINANCIACIONES ANTERIORES</strong></td>
+												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_discover.refinanciaciones_anteriores"></span></td>
+											</tr>
+											<tr>
 												<td><strong>MOTIVO DE NO PAGO ANTERIOR</strong></td>
 												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_discover.motivo_no_pago_anterior"></span></td>
 											</tr>
@@ -1494,6 +1506,10 @@
 											<tr>
 												<td><strong>OFERTA VALOR</strong></td>
 												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_mastercard.oferta_valor"></span></td>
+											</tr>
+											<tr>
+												<td><strong>REFINANCIACIONES ANTERIORES</strong></td>
+												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_mastercard.refinanciaciones_anteriores"></span></td>
 											</tr>
 											<tr>
 												<td><strong>MOTIVO DE NO PAGO ANTERIOR</strong></td>
