--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -532,6 +532,10 @@
 												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_diners.refinanciaciones_anteriores"></span></td>
 											</tr>
 											<tr>
+												<td><strong>CARDIA</strong></td>
+												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_diners.cardia"></span></td>
+											</tr>
+											<tr>
 												<td><strong>MOTIVO DE NO PAGO ANTERIOR</strong></td>
 												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_diners.motivo_no_pago_anterior"></span></td>
 											</tr>
@@ -866,6 +870,10 @@
 												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_interdin.refinanciaciones_anteriores"></span></td>
 											</tr>
 											<tr>
+												<td><strong>CARDIA</strong></td>
+												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_interdin.cardia"></span></td>
+											</tr>
+											<tr>
 												<td><strong>MOTIVO DE NO PAGO ANTERIOR</strong></td>
 												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_interdin.motivo_no_pago_anterior"></span></td>
 											</tr>
@@ -1189,6 +1197,10 @@
 												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_discover.refinanciaciones_anteriores"></span></td>
 											</tr>
 											<tr>
+												<td><strong>CARDIA</strong></td>
+												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_discover.cardia"></span></td>
+											</tr>
+											<tr>
 												<td><strong>MOTIVO DE NO PAGO ANTERIOR</strong></td>
 												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_discover.motivo_no_pago_anterior"></span></td>
 											</tr>
@@ -1510,6 +1522,10 @@
 											<tr>
 												<td><strong>REFINANCIACIONES ANTERIORES</strong></td>
 												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_mastercard.refinanciaciones_anteriores"></span></td>
+											</tr>
+											<tr>
+												<td><strong>CARDIA</strong></td>
+												<td colspan="3"><span v-html="aplicativo_diners_tarjeta_mastercard.cardia"></span></td>
 											</tr>
 											<tr>
 												<td><strong>MOTIVO DE NO PAGO ANTERIOR</strong></td>
