--- a/views/producto/editar.twig
+++ b/views/producto/editar.twig
@@ -418,6 +418,13 @@
 					</div>
 
 					<div class=" row mb-4">
+						<label for="inputName" class="col-md-2 form-label">SEGURO</label>
+						<div class="col-md-4">
+							<input type="text" readonly class="form-control-plaintext" v-model="aplicativo_diners.seguro_desgravamen">
+						</div>
+					</div>
+
+					<div class=" row mb-4">
 						<label for="inputName" class="col-md-2 form-label">NÚMEROS DE CONTACTO</label>
 						<div class="col-md-4">
 							<input type="text" readonly class="form-control-plaintext" v-model="aplicativo_diners.numero_contactos">
